--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     font-weight: normal;
     font-style: normal;
     font-size: 1.5rem;
+    left: 0%;
 }
 
 .table{
@@ -21,8 +22,11 @@ body {
 }
 
 #exercise {
-    margin-top: 5%;
+    margin-top: 1%;
+    text-align: center;
+   
 }
+
 
 .modal {
     display: none; /* Hidden by default */
@@ -55,46 +59,93 @@ body {
     font-weight: bold;
   }
 
-  .hunderterFeld, .zehnerFeld, .einerFeld {
-    margin-top: 3%;
+.dienesFeld{
+ 
+  height: 400px;
+  width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  border: 4px solid #92f5f8;
+}
+  .hunderterFeld{
+    margin-top: 1%;
     float: left;
-    height: 300px;
-    width: 33%;
+    height: 350px;
+    width: 50%;
     position: relative;
+    left: 1%;
+    margin-right: 4%;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+  
+  }
+ 
+  .zehnerFeld, .zehnerFeld2{
+    margin-top: 1%;
+    float: left;
+    height: 350px;
+    width: 10%;
+    position: relative;
+    left: 1%;
+    right: 1%;
+    display: grid;
+    grid-row-end: span 2;
+    grid-template-rows: 9% 9% 9% 9% 15% 9% 9% 9% 9% ;
+  }
+ 
+  
+  .einerFeld{
+    margin-top: 1%;
+    float: left;
+    height: 350px;
+    width: 20%;
+    position: relative;
+    left: 1%;
+    margin-right: 1%;
+    margin-left: 4%;
+    display: grid;
+    grid-template-columns: 9% 9% 9% 9% 15% 9% 9% 9% 9% 15%;
+    grid-template-rows: 10% 10% 10%;
+   
   }
 
   .hunderterTicket{    
     background-image: url("img/Hunderterplatte.png");
-    position:static; 
+    position: static; 
     float: left;
-    background-size: 80px;
-    height: 80px;
-    width: 80px;
-    margin: 2% 2% 2% 2%;
- 
+    background-size: 140px;
+    height: 137px;
+    width: 140px;
   }
 
   .zehnerTicket{
     background-image: url("img/Zehnerstange.png");
-    position:static; 
     float: left;
-    background-size: 125px 25px;
-    height: 25px;
-    width: 125px;
-    margin: 2% 2% 2% 2%;
+    background-size: 145px 18px;
+    height: 18px;
+    width: 145px;
+   
+    
   }
 
   .einerTicket{
     background-image: url("img/Wuerfel.png");
     position:static; 
     float: left;
-    background-size: 40px 40px;
-    height: 40px;
-    width: 40px;
-    margin: 2% 2% 2% 2%;
+    background-size: 20px 20px;
+    height: 20px;
+    width: 20px;
+    margin: 4% 2% 2% 2%;
 
   }
   
   #inputHunderter, #inputZehner, #inputEiner{
-    width: 15%;
+    width: 80%;
   }
+  .row > *{
+    max-width: 30%;
+    text-align: center;
+  }
+  
